--- a/index.html
+++ b/index.html
@@ -6,31 +6,9 @@
   <title>Plantou! — Monitoramento e Adoção de Árvores Urbanas</title>
   <meta name="description" content="Plataforma de monitoramento e adoção de árvores urbanas — transparência, engajamento e ESG.">
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="header.html" />
 </head>
 <body>
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container header-wrap">
-      <a class="brand" href="index.html" aria-label="Página inicial">
-        <span class="brand-logo" aria-hidden="true">🌱</span>
-        <span class="brand-text">Plantou!</span>
-      </a>
-
-      <nav class="nav" aria-label="Primária">
-        <a href="#como-funciona">Como funciona</a>
-        <a href="#mapa">Mapa</a>
-        <a href="#adocao">Adoção</a>
-        <a href="#manutencao">Manutenção</a>
-        <a href="#beneficios">Benefícios</a>
-      </nav>
-
-      <div class="header-actions">
-        <a class="btn btn--ghost" href="login.html">Entrar</a>
-        <a class="btn" href="#adocao">Quero adotar</a>
-      </div>
-    </div>
-  </header>
-
   <!-- Hero -->
   <section class="hero">
     <div class="container hero-grid">
@@ -237,7 +215,7 @@
         <a href="#como-funciona">Como funciona</a>
         <a href="#mapa">Mapa</a>
         <a href="#adocao">Adoção</a>
-        <a href="#manutencao">Manutenção</a>
+        <a href="#manutencao">Manutenç</a>
       </nav>
       <div class="foot-meta">
         <span>© <span id="year"></span> Plantou!</span>
