--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
   <title>Plantou! — Monitoramento e Adoção de Árvores Urbanas</title>
   <meta name="description" content="Plataforma de monitoramento e adoção de árvores urbanas — transparência, engajamento e ESG.">
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="header.html" />
 </head>
 <body>
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container header-wrap">
+      <a class="brand" href="index.html" aria-label="Página inicial">
+        <span class="brand-logo" aria-hidden="true">🌱</span>
+        <span class="brand-text">Plantou!</span>
+      </a>
+
+      <nav class="nav" aria-label="Primária">
+        <a href="#como-funciona">Como funciona</a>
+        <a href="#mapa">Mapa</a>
+        <a href="#adocao">Adoção</a>
+        <a href="#manutencao">Manutenção</a>
+        <a href="#beneficios">Benefícios</a>
+      </nav>
+
+      <div class="header-actions">
+        <a class="btn btn--ghost" href="login.html">Entrar</a>
+        <a class="btn" href="#adocao">Quero adotar</a>
+      </div>
+    </div>
+  </header>
+
   <!-- Hero -->
   <section class="hero">
     <div class="container hero-grid">
@@ -92,6 +114,10 @@
           <div class="pin" style="--x:58%;--y:52%" title="#BR-01877"></div>
           <div class="pin" style="--x:40%;--y:72%" title="#BR-09002"></div>
           <div class="pin" style="--x:75%;--y:28%" title="#BR-00231"></div>
+          <div class="pin" style="--x:35%;--y:84%" title="#BR-02387"></div>
+          <div class="pin" style="--x:35%;--y:84%" title="#BR-02387"></div>
+          <div class="pin" style="--x:35%;--y:84%" title="#BR-02387"></div>
+          <div class="pin" style="--x:35%;--y:84%" title="#BR-02387"></div>
         </div>
       </div>
       <div class="legend">
@@ -215,7 +241,7 @@
         <a href="#como-funciona">Como funciona</a>
         <a href="#mapa">Mapa</a>
         <a href="#adocao">Adoção</a>
-        <a href="#manutencao">Manutenç</a>
+        <a href="#manutencao">Manutenção</a>
       </nav>
       <div class="foot-meta">
         <span>© <span id="year"></span> Plantou!</span>
